Fixes #1651: UpdateStudySubjectServletTest test class causes OutOfMemory error when running all the tests. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2016 14881f01-568e-124b-961a-bb94932aa8d1